# InsightAI

./: .dockerignore  .env.docker.example  .env.example  .gitignore  Dockerfile  FUTURE_PHASES.md  LICENSE  NOTICE  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-mssql.txt  requirements-rag.txt  requirements.txt
.github/workflows/: ci.yml
Knowledge/: README.md  sql_never_guess_schema.md
alembic/: env.py
alembic/versions/: 001_bootstrap_app_db.py  002_api_keys_table.py
apps/: README.md  serve_demo.py
apps/demo/: app.js  index.html  styles.css
config/: README.md
config/governance/: README.md  policies.yaml
config/governance/examples/education/: README.md  policies.yaml
config/semantic/: README.md  example_queries.yaml  trusted_metrics.yaml
config/semantic/examples/education/: README.md  example_queries.yaml  trusted_metrics.yaml
context/: README.md  __init__.py
context/plugins/: README.md  schema_context_plugin.py.example
deploy/: README.md  insightai.service
docker/: README.md
docker/postgres/init/: 00-pgvector-extension.sql  01-readonly-role.sql  02-sample-schema.sql  03-mssql-readonly-notes.md
docs/: GOVERNANCE.md  PERFORMANCE.md  PHASE_11_TRUSTED_SEMANTIC.md  PHASE_12_GOVERNANCE.md  PHASE_16_APP_DB_AUTH.md  RAG_INGEST.md
prompts/answer_generation/: README.md  stream_system.md  stream_user.md  system.md  user.md
prompts/hybrid/: combined_stream_system.md  combined_stream_user.md  combined_system.md  combined_user.md
prompts/rag/: stream_system.md  stream_user.md  system.md  user.md
prompts/sql_generation/: README.md  system.md  user.md
schema/: README.md
scripts/: ask.py  smoke_api.sh  smoke_docker.sh  test.sh
src/insightai/: __init__.py  main.py
src/insightai/api/: audit_context.py  chat_session_resolve.py  deps.py  exception_handlers.py  metrics_middleware.py  middleware.py  rate_limit.py  sse.py  tracing_middleware.py
src/insightai/api/auth/: __init__.py  admin.py  dependencies.py
src/insightai/api/routes/: metrics.py
src/insightai/api/schemas/: __init__.py  admin.py  ask.py  chat.py  chat_session.py  common.py  explainability.py  llm.py  schema.py  sql_generation.py
src/insightai/cli/: __init__.py  app_db.py  governance.py  ingest.py  keys.py  knowledge_sync.py  rag_load.py  semantic.py
src/insightai/core/: __init__.py  constants.py
src/insightai/domain/: __init__.py  exceptions.py
src/insightai/infrastructure/: __init__.py
tests/: README.md  __init__.py  conftest.py
tests/fixtures/: answer_generation_samples.py  sql_generation_samples.py  sql_safety_payloads.py  sqlite_e2e_schema.py
tests/fixtures/governance/: policies.yaml
tests/fixtures/rag/: campus_overview.md
tests/fixtures/schema/: django_doc_mini.json  django_doc_mini.md  legacy_campus_mini.md
tests/fixtures/semantic/: example_queries.yaml  trusted_metrics.yaml
tests/integration/: README.md  chat_product_fixtures.py  conftest.py  mssql_env.py  sse_helpers.py  test_admin_api.py  test_ai_complete_api.py  test_ask_api.py  test_ask_e2e.py  test_auth_api.py  test_auth_api_db_keys.py  test_chat_api.py  test_chat_product_e2e.py  test_chat_sessions_api.py  test_chat_stream_e2e.py  test_exception_handlers.py  test_governance_principal_api.py  test_health_api.py  test_mssql_integration.py  test_rate_limit_api.py  test_readiness_api.py  test_run_query_e2e.py  test_schema_api.py  test_sql_api.py  test_sql_generate_api.py
tests/performance/: __init__.py  conftest.py  test_cache_baselines.py
tests/unit/: conftest.py  test_answer_generator.py  test_answer_prompt_loader.py  test_answer_response_parser.py  test_api_auth.py  test_api_key_models.py  test_api_key_store.py  test_app_database_settings.py  test_app_db_alembic.py  test_ask_dry_run.py  test_ask_governance.py  test_ask_use_case.py  test_ask_use_case_audit.py  test_cache.py  test_chat_sse.py  test_citations.py  test_composite_sql_validator.py  test_database_executor.py  test_dbapi_errors.py  test_dialect.py  test_domain_context_prompt.py  test_domain_models.py  test_embedding_provider.py  test_engine_factory.py  test_explainability_builder.py  test_explainability_models.py  test_generate_answer_use_case.py  test_generate_sql_trusted.py  test_generate_sql_use_case.py  test_governance_cli.py  test_governance_context.py  test_governance_enforcer.py  test_governance_policy_models.py  test_governance_validator.py  test_governance_yaml_loader.py  test_governed_sql_pipeline.py  test_hybrid_ask.py  test_hybrid_prompts.py  test_hybrid_router.py  test_key_format.py  (+45 more)
(+207 files in other folders)
